Fix transparency on badge, hide on mobile

--- a/style.scss
+++ b/style.scss
@@ -347,13 +347,12 @@ td{
   padding: 10px;
 }
 
-#nomobile {
+.nomobile {
   
 }
 @media only screen 
-and (min-device-width : 320px) 
 and (max-device-width : 480px) { 
-  #nomobile { 
+  .nomobile { 
     display: none; 
   }
 }
